exports[`test should accept a default value 1`] = `
<Checkbox
  defaultValue={true}>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small />
    </h6>
    <input
      data-spec="input"
      defaultChecked="checked"
      style={
        Object {
          "width": 0
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add classes with classes prop 1`] = `
<Checkbox
  classes={
    Array [
      "test1",
      "harambe"
    ]
  }>
  <div
    className="input checkbox test1 harambe"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should add classes with classes prop 2`] = `
<Checkbox
  classes="test1 harambe">
  <div
    className="input checkbox test1 harambe"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should disable input with disabled prop 1`] = `
<Checkbox
  disabled={true}>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      disabled={true}
      style={
        Object {
          "width": 0
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;

exports[`test should render with minimal props 1`] = `
<Checkbox>
  <div
    className="input checkbox"
    data-spec="input-wrapper">
    <h6
      className="soft-left push-half-left flush-bottom text-left float-left locked-top">
      <small />
    </h6>
    <input
      data-spec="input"
      defaultChecked=""
      style={
        Object {
          "width": 0
        }
      }
      type="checkbox" />
    <Label>
      <label
        style={Object {}} />
    </Label>
  </div>
</Checkbox>
`;
